objects/ssot__SurveyQuestionResponse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__BooleanValue__c</fullName>
        <label>Boolean Value</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Datatype__c</fullName>
        <label>Data Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DateTimeValue__c</fullName>
        <label>Date Time Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DateValue__c</fullName>
        <label>Date Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Survey Question Response Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RankNumber__c</fullName>
        <label>Rank</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__ResponseValue__c</fullName>
        <label>Response Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveyQuestionId__c</fullName>
        <label>Survey Question</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SurveyResponseId__c</fullName>
        <label>Survey Response</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761226553_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyQuestionResponse_SurveyQuestio_rel</label>
        <referenceTo>ssot__SurveyQuestion__dlm</referenceTo>
        <relationshipLabel>SurveyQuestionResponse_SurveyQuestio_rel</relationshipLabel>
        <relationshipName>rel_1697761226553_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761227748_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyQuestionResponse_SurveyRespons_rel</label>
        <referenceTo>ssot__SurveyResponse__dlm</referenceTo>
        <relationshipLabel>SurveyQuestionResponse_SurveyRespons_rel</relationshipLabel>
        <relationshipName>rel_1697761227748_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>